--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ gzip_types text/plain text/html application/html text/css application/javascript
 # An git object is immutable
 location ~ '^/[A-z0-9]+\.git/objects/[0-9a-f]{2}/[0-9a-f]{38}$' {
   access_log off;
-  root $repositories;    
+  root $repositories;
   add_header Cache-Control "public";
   expires 1y;
 }
@@ -23,9 +23,9 @@ location ~ '^/[A-z0-9]+\.git/objects/[0-9a-f]{2}/[0-9a-f]{38}$' {
 # A pack file is immutable after creation
 location ~ '^/[A-z0-9]+\.git/objects/pack/pack-[0-9a-f]{40}.(pack|idx)$' {
   access_log off;
-  root $repositories;        
+  root $repositories;
   add_header Cache-Control "public";
-  expires 1y;  
+  expires 1y;
 }
 
 # But information about packfiles is not...
@@ -38,9 +38,9 @@ location ~ '^/[A-z0-9]+\.git/objects/info/packs$' {
 # The HEAD ref could change.
 location ~ '^/[A-z0-9]+\.git/HEAD$' {
   access_log off;
-  root $repositories;    
+  root $repositories;
   add_header Cache-Control "no-cache";
-  expires 1y;  
+  expires 1y;
 }
 
 # This is a bit annoying; nginx won't match on querystrings, so we
@@ -53,10 +53,10 @@ location ~ '^(/[A-z0-9]+\.git/info/refs)$' {
   access_log off;
   if ( $args ~ "service=git-upload-pack" ) { return 419; }
   if ( $args = "" ) { return 419; }
-  
+
   # this is needed for the smart git protocol
   client_max_body_size 0;
-  
+
   proxy_pass  http://node;
   proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
   proxy_redirect off;
@@ -66,7 +66,7 @@ location ~ '^(/[A-z0-9]+\.git/info/refs)$' {
 location @gitUploadPack {
   root $repositories;
   add_header Cache-Control "no-cache";
-  access_log off;    
+  access_log off;
 }
 
 location ^~ /public {
@@ -78,7 +78,7 @@ location ^~ /public {
   location ~ '/public/v[0-9]+\.[0-9]+\.[0-9]+/(.*)$' {
     root $ximera;
     expires 1y;
-    try_files /public/$1 =404;  
+    try_files /public/$1 =404;
   }
 }
 
@@ -92,16 +92,16 @@ location ^~ /node_modules {
   location ~ '/node_modules/v[0-9]+\.[0-9]+\.[0-9]+/(.*)$' {
     root $ximera;
     expires 1y;
-    try_files /node_modules/$1 =404;  
+    try_files /node_modules/$1 =404;
   }
 }
 
 # send the request to our app server
 location / {
-  proxy_pass  http://node;
+  proxy_pass  http://127.0.0.1:3000;
   proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
   proxy_redirect off;
-  
+
   proxy_set_header        Host            $host;
   proxy_set_header        X-Real-IP       $remote_addr;
   proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
